--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,16 @@ script:
   docker run -e CI=true hg/docker-react-app npm run test -- --coverage
 
 after_success:
-  - echo "Test Success!"
+   echo "Test Success!"
+
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-northeast-2"
+  app: "docker-react-app"
+  env: "Dockerreactapp-env"
+  bucket_name: "elasticbeanstalk-ap-northeast-2-493464781344"
+  bucket_path: "docker-react-app"
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_ACCESS_KEY
